# keyaki

./: .gitignore  .gitlab-ci.yml  .travis.yml  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  Setup.hs  deploy.sh  docker-compose.yml  keyaki.cabal  package.yaml  release.sh  stack.yaml  webpack.config.js
client/: .gitignore  LICENSE  README.md  elm.json  index.html  package-lock.json  package.json  webpack.config.js
client/src/: Main.elm  hepburn.elm  index.html  index.js  keyaki.elm  styles.scss
client/src/App/: Hepburn.elm  Route.elm  State.elm  Types.elm  View.elm  styles.css
client/src/Common/: Encoding.elm  Html.elm  String.elm  Url.elm
client/src/Entries/: Api.elm  State.elm  Types.elm  View.elm  styles.css
client/src/Entry/: Api.elm  State.elm  Types.elm  View.elm
client/src/Hepburn/: Translate.elm
client/src/Kana/: Api.elm  State.elm  Types.elm  View.elm  styles.css
client/src/Kanas/: Api.elm  State.elm  Types.elm  View.elm  styles.css
client/src/Page/: Home.elm  NotFound.elm  Srs.elm
client/src/Todo/: Api.elm  State.elm  Types.elm  View.elm
client/src/Todos/: Api.elm  State.elm  Types.elm  View.elm
client/src/tutorial/: buttons.elm  text-fields.elm
client/tests/: Example.elm
config/: keter.yml
docker/: GPG_PUB  docker-compose.build.yml  docker-compose.keyaki.yml  docker-compose.yml
docker/ci/: Dockerfile
docker/local/: Dockerfile
docker/pass-test/: Dockerfile
docker/prod/: Dockerfile
scripts/: deploy-docker-image.sh  docker-build-local.sh  docker-compose-keyaki.sh  docker-credential-pass.sh  docker-deploy.sh  docker-local-build.sh  killRun.sh  read-version-name.py
server/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  keyaki.cabal  package.yaml  stack.yaml
server/app/: devel.hs
server/executable/: Main.hs
server/postgresql/: v1_0__initial.sql
server/scripts/: dev.sh  killRun.sh
server/src/: Api.hs
server/test/: Main.hs
server/test-suite/: AppSpec.hs
server/test/Spec/: Common.hs  User.hs
src/: Api.hs  Config.hs  Init.hs  Logger.hs  Models.hs  buttons.elm  hepburn.elm  index.js  keyaki.elm  styles.scss  utils.elm
src/Api/: Common.hs  Entry.hs  Housekeeping.hs  Kana.hs  Todo.hs  User.hs
src/hepburn/: hepburn.elm
test/: UserDbSpec.hs
