name:                keyaki
version:             0.0.1-SNAPSHOT
synopsis:            JLPT SRS
description:         SRS Project seeded from servant-persistent
license:             MIT
license-file:        LICENSE
author:              Federico Bartolomei
maintainer:          keyaki@bartholomews.io
copyright:           2020 Federico Bartolomei
category:            Web
build-type:          Simple
cabal-version:       1.18

source-repository head
    type:
        git
    location:
        https://www.github.com/bartholomews/keyaki

executable keyaki
    main-is:
        Main.hs
    build-depends:
        base >= 4.9 && < 5.0
      , keyaki
      , persistent-postgresql
      , wai
      , warp
      , monad-logger
      , safe
      , monad-metrics
      , wai-middleware-metrics
      , microlens
      , ekg
      , ekg-core
    hs-source-dirs:
        app
    default-language:
        Haskell2010
    ghc-options:
        -fwarn-unused-imports

library
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    exposed-modules:
        Config
      , Init
      , Models
      , Api
      , Api.Common
      , Api.Kana
      , Api.User
      , Logger
      , DevelMain
    build-depends:
        base >= 4.9 && < 5.0
      , aeson
      , bytestring
      , containers
      , ekg
      , ekg-core
      , fast-logger
      , foreign-store
      , http-types
      , katip >= 0.5.0.2 && < 0.6
      , microlens
      , monad-control
      , monad-logger
      , monad-metrics
      , mtl
      , persistent
      , persistent-postgresql
      , persistent-template
      , safe
      , servant >= 0.13 && < 0.14
      , servant-js >= 0.9 && < 0.10
      , servant-server >= 0.13 && < 0.14
      , text
      , transformers
      , unordered-containers
      , wai
      , wai-app-static
      , wai-cors
      , wai-extra
      , wai-middleware-metrics
      , warp
      , resource-pool
    ghc-options:
        -fwarn-unused-imports

test-suite keyaki-test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    other-modules:
        ApiSpec
        UserDbSpec
    build-depends:
        base
      , persistent
      , persistent-postgresql
      , keyaki
      , servant >= 0.13 && < 0.14
      , servant-server >= 0.13 && < 0.14
      , QuickCheck
      , hspec
      , mtl
      , transformers
      , text
      , monad-metrics
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
    default-language:
        Haskell2010
