name:                keyaki
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/bartholomews/keyaki#readme
license:             MIT
license-file:        ../LICENSE
author:              Federico Bartolomei
maintainer:          fbarto01@mail.bbk.ac.uk
copyright:           2018 Federico Bartolomei
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable keyaki
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Api
                     , App
                     , Models
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , exceptions
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , resourcet
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , wai-cors
                     , warp
  default-language:    Haskell2010

test-suite keyaki-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  other-modules:       AppSpec
                     , Models
                     , Api
                     , App
  build-depends:       base
                     , exceptions
                     , bytestring
                     , monad-logger
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , QuickCheck
                     , warp
                     , wai
                     , wai-extra
                     , wai-cors
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , resourcet
                     , servant
                     , servant-server
                     , servant-client
                     , string-conversions
                     , text
                     , http-client
                     , mockery
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bartholomews/keyaki
